# ml-zoomcamp-2025-capstone-1

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  notebook.ipynb  predict.py  pyproject.toml  train.py
.github/workflows/: fly-deploy.yml
