[project]
name = "ml-zoomcamp-2025-capstone-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchtext>=0.6.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.57.3",
    "xgboost>=3.1.2",
]
